--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,20 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mediapipe/camera_utils": "^0.3.1640029074",
+    "@mediapipe/pose": "0.5.1675469404",
+    "@tensorflow/tfjs": "^4.8.0",
+    "aframe": "^1.4.1",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "three": "^0.161.0",
-    "aframe": "^1.4.1",
-    "@mediapipe/pose": "^0.5.1646424915",
-    "@mediapipe/camera_utils": "^0.1.1646424915",
-    "@tensorflow/tfjs": "^4.8.0",
-    "axios": "^1.4.0"
+    "three": "^0.161.0"
   },
   "devDependencies": {
-    "vite": "^5.2.0",
-    "tailwindcss": "^4.0.0",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14"
+    "tailwindcss": "^3.4.0",
+    "@tailwindcss/postcss": "latest",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0",
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.2.0"
   }
+
 }
