--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Backend
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/ar_fashion
+MONGO_URI=mongodb://mongo:27017/ar_fashion
 JWT_SECRET=change_this_super_secret
 JWT_REFRESH_SECRET=change_refresh_secret
 EMAIL_HOST=smtp.example.com
